started blackjack project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,7 @@
                 <li><a href="{{ path('game') }}">Game</a></li>
                 <li><a href="{{ path('library') }}">Library</a></li>
                 <li><a href="{{ path('metrics') }}">Metrics</a></li>
+                <li><a href="{{ path('project') }}">Project</a></li>
             </ul>
         </nav>
 
