--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -960,3 +960,111 @@ input {
 .complexity-img img {
     height: 10rem;
 }
+
+/* Project css */
+
+body.project::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../images/background2.jpg') no-repeat center center;
+    background-size: cover;
+    filter: blur(5px);
+    z-index: -1;
+}
+
+nav.project {
+    background-color: #000000;
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 20px;
+}
+
+footer.project-footer {
+    width: 100%;
+    background-color: #000000;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    position: relative;
+    z-index: 1;
+    margin-top: auto;
+}
+
+nav.project ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav.project ul li {
+    margin: 0 15px;
+}
+
+nav.project ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 3em;
+    padding: 10px 15px;
+    display: block;
+    transition: all 0.5s ease;
+    font-family: 'Zain', serif;
+}
+
+nav.project ul li a:hover {
+    background-color: #3c147b;
+    border-radius: 40px;
+}
+
+footer.project-footer p {
+    margin: 0;
+    font-size: 1.3em;
+    font-family: 'Zain', serif;
+}
+
+.rules {
+    text-align: center;
+}
+
+.rules a {
+    font-size: 2.5rem;
+    font-family: 'Zain', serif;
+    text-decoration: none;
+}
+
+.rules a:hover {
+    color: red;
+}
+
+.blackjack h1 {
+    font-size: 4rem;
+    color: black;
+    font-family: 'Zain', serif;
+}
+
+.blackjack p {
+    font-size: 1.7rem;
+}
+
+.project .start-button {
+    display: inline-block;
+    padding: 15px 20px;
+    background-color: #6342f9;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.project .start-button:hover {
+    transform: scale(1.15);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
