--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -4,9 +4,15 @@
 
 {% block body %}
     <h1>About</h1>
-    <main>
-        <div class="">
-
+    <main class="rules">
+        <div class="blackjack">
+            <h2>Blackjack projektet</h2>
+            <h3>
+                Välkommen till mitt Blackjack spel! 
+            </h3>
+            <p>
+                
+            </p>
         </div>
     </main>
     
