--- a/templates/project/game.html.twig
+++ b/templates/project/game.html.twig
@@ -1,21 +1,33 @@
 {% extends 'project-base.html.twig' %}
 
-{% block title %}Landningssida{% endblock %}
+{% block title %}BlackJack{% endblock %}
 
 {% block body %}
+<main class="project">
+    <div class="card21">
+        <h1>Spela Blackjack</h1>
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
 
-<main>
-    <div class="blackjack">
-        <h1>BlackJack Game</h1>
-
-        <p style="text-align:center">Read the rules here:</p>
-        <p class="rules">
-            <a href="{{ path('rules') }}">Rules</a>
+        {% if status == 'not_started' %}
+            <form action="{{ path('blackjack_bet') }}" method="post">
+                <div class="player-field">
+                    <label for="player_name">Ditt namn:</label>
+                    <input type="text" id="player_name" name="player_name" required autofocus>
+                </div>
+                <div class="player-field">
+                    <label for="num_hands">Antal händer att spela (1-3):</label>
+                    <input type="number" id="num_hands" name="num_hands" min="1" max="3" value="1" required title="Välj hur många händer du vill spela samtidigt mot dealern.">
+                </div>
+                <button type="submit">Fortsätt</button>
+            </form>
+        {% endif %}
+        <p class="link">
+            <a href="{{ path('rules') }}">Regler</a>
         </p>
-
-        <div class="button-container">
-            <a href="{{ path('game_start') }}" class="start-button">Start The Game!</a>
-        </div>
     </div>
 </main>
 {% endblock %}
