--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -11,7 +11,16 @@
                 Välkommen till mitt Blackjack spel! 
             </h3>
             <p>
-                
+                Detta projekt är en implementation av kortspelet Blackjack skriven i PHP. Syftet med projektet är att 
+                få bättre förståelse för hur man strukturerar ett spel med flera klasser som representerar kort, kortlekar 
+                och spelare.
+            </p><br>
+            <p>
+                Kortleken i Blackjack projektet är en egen klass som skapar 52 kort med fyra färger och 13 olika kortnummer,
+                där varje kort är ett objekt som innehåller färg, kortnummer, och värde. Kortens värde bestäma utifrån deras 
+                nummer, där figurkorten är värda 10 och ess kan räknas som antigen 11 eller 1 beroende på spel situationen. 
+                Kortleken kan slumpmässigt blandas och kort kan dras från toppen, vilket minskar antalet kort under spelets 
+                gång. Genom att samla kortlogik i separata klassar blir spelet mer strukturerat.
             </p>
         </div>
     </main>
