--- a/templates/project-base.html.twig
+++ b/templates/project-base.html.twig
@@ -20,7 +20,7 @@
         {% endblock %}
     </head>
     <body class="project">
-        <header class="project-header" style="background-image: url('/img/background2.jpg') !important;">
+        <header class="project-header" style="background-image: url({{ asset('img/background2.jpg') }}) !important;">
             <span class="site-title"></span>
         </header>
 
